Added div to push bottom down

--- a/education.html
+++ b/education.html
@@ -25,9 +25,8 @@
 
       <h2>I GRADUATED FROM MIRA COSTA COMMUNITY COLLEGE IN OCEANSIDE, CALIFORNIA WITH MY AA IN SOCIAL AND BEHAVIORAL SCIENCES IN MAY OF 2012. THE EMPHASIS OF MY STUDIES WAS IN VARIOUS AREAS OF PSYCHOLOGY, AND I WAS AWARDED A SPOT IN THE PHI THETA KAPPA HONOR SOCIETY. I HAD MY FIRST POEM PUBLISHED IN A LOCAL LITERARY MAGAZINE, AND VOLUNTEERED MANY HOURS HELPING WITH VARIOUS ACTIVITIES IN THE ASTRONOMY DEPARTMENT.</h2>
 
-      <div class="bottom">
-        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
-      </div>
+      <div class="bottom"></div>
+      <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
   </body>
 </html>
