--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,8 @@
 
       <h2>IN ORDER TO GRADUATE DEVBOOTCAMP, GROUPS COMPLETED LARGER SCALE APPS. MY TEAM'S APP, VENDABLE, WAS DEVELOPED USING A NODE BACK-END AND AN ANGULAR/IONIC FRONT-END MOBILE IOS DESIGN. THE APP IS MEANT TO SIMPLIFY THE GROCERY SHOPPING EXPERIENCE IN A BIG CITY- COMPLETE WITH A MONGODB OF OVER 100 THOUSAND ITEMS FOUND AT BIG CHAIN GROCERY STORES, THE APP ALLOWS A USER TO FIND STORES BASED ON A 5 MILE RADIUS AND CREATE A SHOPPING LIST OF DESIRED ITEMS. THE LIST PULLS THE DATA AND UPDATES THE USER'S LIST WITH ITEM PRICES AND A GRAND TOTAL. WHEN THE USER IS READY, THE APP USES THE GOOGLE MAPS API TO ROUTE THE DIRECTIONS TO THE CHOSEN STORE.</h2>
 
-      <div class="bottom">
-        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
-      </div>
+      <div class="bottom"></div>
+      <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
   </body>
 </html>
