Attempt to get img to update

--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <img id ="DBC" src="../website-pics/Dev-Bootcamp.png" />
+      <img src="../website-pics/Dev-Bootcamp.png" />
 
       <h2>I GRADUATED FROM DEV BOOTCAMP IN SAN FRANCISCO IN JANUARY OF 2015. I COMPLETED OVER 1000 HOURS OF CODING IN THE 18 WEEK PROGRAM, AND FEEL PREPARED TO WORK AS A FULL-STACK WEB AND MOBILE APP DEVELOPER. AREAS OF FOCUS INCLUDED SERVER AND CLIENT SIDE RUBY ON RAILS, FRONT-END ANGULARJS, AND MOBILE FRONT-END DEVELOPMENT WITH IONIC.</h2>
 
