--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
 
       <h2>I AM A PUBLISHED POET TURNED CREATIVE CODER. I AM AN ART ENTHUSIAST AND PAINTER TRANSFORMING PERSONAL AESTHETIC APPEALS INTO FRONT-END WEB AND APP DESIGN. I BELIEVE IN INVENTING AND REINVENTING MYSELF OFTEN. I AM A RIGHT-BRAIN, BIG-PICTURE THINKER BALANCING THE WORLD OF LINEAR LOGIC AND REASON. I AM PASSIONATE ABOUT REDUCING HUMAN TRAFFICKING AND CHILD PROSTITUTION, BOTH LOCALLY AND GLOBALLY. I BELIEVE IN DANCING AND LAUGHING AS MUCH AS POSSIBLE. I LOVE FOGGY MORNINGS AND ESPRESSO, MAKING SAN FRANCISCO AND SEATTLE MY TWO FAVORITE CITIES.</h2>
 
-      <img src="../website-pics/seattle_SF.png" id="cities"/>
+      <img src="../website-pics/seattle_SF.png" />
 
       <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
 
