--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
 
-      <img src="../website-pics/artstechmagic.jpg" id="ven" />
+      <img src="../website-pics/artstechmagic.jpg" />
 
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
