Fix spacing, changed file structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
+      <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span></h3>
 
   </body>
 </html>
