--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 
       <img src="../website-pics/seattle_SF.png" id="cities"/>
 
-      <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog/blog-journal.html">BLOG</a></span></h3>
+      <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span></h3>
 
   </body>
 </html>
