--- a/portfolio.html
+++ b/portfolio.html
@@ -13,13 +13,13 @@
       <h1>BRIE.MARIE</h1>
       <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h2>AS A PART OF DEVBOOTCAMP'S CURRICULUM, I COMPLETED A SOLO APP CHALLENGE DURING PHASE 2, WEEK 6. I DEVELOPED AN APP, ARTSEE, WHICH CONSUMES THE BROOKLYN MUSEUM API TO ALLOW FOR QUICK ART SEARCHES BASED ON A DESIRED ARTIST. A FUTURE FEATURE OF THE APP WILL BE A MUSIC PLAYER THAT CROSS REFERENCES THE CHOSEN ARTWORK'S CREATION DATE AND PLAYS MUSIC THAT COULD HAVE POSSIBLY INSPIRED THE ARTIST WHILE AT WORK ON THE PIECE.</h2>
+      <h2>AS A PART OF DEVBOOTCAMP'S CURRICULUM, I COMPLETED A SOLO APP CHALLENGE DURING PHASE 2, WEEK 6. I DEVELOPED AN APP, ARTSEE, WHICH CONSUMES THE BROOKLYN MUSEUM API TO ALLOW FOR QUICK ART SEARCHES BASED ON A DESIRED ARTIST. A FUTURE FEATURE OF THE APP WILL BE A MUSIC PLAYER THAT CROSS REFERENCES THE CHOSEN ARTWORK'S CREATION DATE AND PLAYS MUSIC THAT COULD HAVE POSSIBLY INSPIRED THE ARTIST WHILE AT WORK ON THE PIECE.<br />
 
-      <a href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
+      <a href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
 
-      <h2>IN ORDER TO GRADUATE DEVBOOTCAMP, GROUPS COMPLETED LARGER SCALE APPS. MY TEAM'S APP, VENDABLE, WAS DEVELOPED USING A NODE BACK-END AND AN ANGULAR/IONIC FRONT-END MOBILE IOS DESIGN. THE APP IS MEANT TO SIMPLIFY THE GROCERY SHOPPING EXPERIENCE IN A BIG CITY- COMPLETE WITH A MONGODB OF OVER 100 THOUSAND ITEMS FOUND AT BIG CHAIN GROCERY STORES, THE APP ALLOWS A USER TO FIND STORES BASED ON A 5 MILE RADIUS AND CREATE A SHOPPING LIST OF DESIRED ITEMS. THE LIST PULLS THE DATA AND UPDATES THE USER'S LIST WITH ITEM PRICES AND A GRAND TOTAL. WHEN THE USER IS READY, THE APP USES THE GOOGLE MAPS API TO ROUTE THE DIRECTIONS TO THE CHOSEN STORE.</h2>
+      <h2>IN ORDER TO GRADUATE DEVBOOTCAMP, GROUPS COMPLETED LARGER SCALE APPS. MY TEAM'S APP, VENDABLE, WAS DEVELOPED USING A NODE BACK-END AND AN ANGULAR/IONIC FRONT-END MOBILE IOS DESIGN. THE APP IS MEANT TO SIMPLIFY THE GROCERY SHOPPING EXPERIENCE IN A BIG CITY- COMPLETE WITH A MONGODB OF OVER 100 THOUSAND ITEMS FOUND AT BIG CHAIN GROCERY STORES, THE APP ALLOWS A USER TO FIND STORES BASED ON A 5 MILE RADIUS AND CREATE A SHOPPING LIST OF DESIRED ITEMS. THE LIST PULLS THE DATA AND UPDATES THE USER'S LIST WITH ITEM PRICES AND A GRAND TOTAL. WHEN THE USER IS READY, THE APP USES THE GOOGLE MAPS API TO ROUTE THE DIRECTIONS TO THE CHOSEN STORE.<br />
 
-      <a href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a>
+      <a href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a></h2>
 
 
       <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span></h3>
