Add scarlett class

--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
   <body>
 
       <h1>BRIE.MARIE</h1>
-      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
       <img src="../website-pics/Dev-Bootcamp.png" />
 
