--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
   <body>
 
       <h1>BRIE.MARIE</h1>
-      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
       <h2>I AM A PUBLISHED POET TURNED CREATIVE CODER. I AM AN ART ENTHUSIAST AND PAINTER TRANSFORMING PERSONAL AESTHETIC APPEALS INTO FRONT-END WEB AND APP DESIGN. I BELIEVE IN INVENTING AND REINVENTING MYSELF OFTEN. I AM A RIGHT-BRAIN, BIG-PICTURE THINKER BALANCING THE WORLD OF LINEAR LOGIC AND REASON. I AM PASSIONATE ABOUT REDUCING HUMAN TRAFFICKING AND CHILD PROSTITUTION, BOTH LOCALLY AND GLOBALLY. I BELIEVE IN DANCING AND LAUGHING AS MUCH AS POSSIBLE. I LOVE FOGGY MORNINGS AND ESPRESSO, MAKING SAN FRANCISCO AND SEATTLE MY TWO FAVORITE CITIES.</h2>
 
