Change h1 back to black

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
 
   <body>
 
-      <h1 class="scarlett">BRIE.MARIE</h1>
-      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      <h1>BRIE.MARIE</h1>
+      <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
       <h2>AS A PART OF DEVBOOTCAMP'S CURRICULUM, I COMPLETED A SOLO APP CHALLENGE DURING PHASE 2, WEEK 6. I DEVELOPED AN APP, ARTSEE, WHICH CONSUMES THE BROOKLYN MUSEUM API TO ALLOW FOR QUICK ART SEARCHES BASED ON A DESIRED ARTIST. A FUTURE FEATURE OF THE APP WILL BE A MUSIC PLAYER THAT CROSS REFERENCES THE CHOSEN ARTWORK'S CREATION DATE AND PLAYS MUSIC THAT COULD HAVE POSSIBLY INSPIRED THE ARTIST WHILE AT WORK ON THE PIECE.<br />
 
