Add networks id

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
       <a id="vendable" href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a></h2>
 
-      <h3>FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
+      <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
       <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a></h2>
 
 
