Took off all caps

--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
       <h1>BRIE.MARIE</h1>
       <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h2>I AM A PUBLISHED POET TURNED CREATIVE CODER. I AM AN ART ENTHUSIAST AND PAINTER TRANSFORMING PERSONAL AESTHETIC APPEALS INTO FRONT-END WEB AND APP DESIGN. I BELIEVE IN INVENTING AND REINVENTING MYSELF OFTEN. I AM A RIGHT-BRAIN, BIG-PICTURE THINKER BALANCING THE WORLD OF LINEAR LOGIC AND REASON. I AM PASSIONATE ABOUT REDUCING HUMAN TRAFFICKING AND CHILD PROSTITUTION, BOTH LOCALLY AND GLOBALLY. I BELIEVE IN DANCING AND LAUGHING AS MUCH AS POSSIBLE. I LOVE FOGGY MORNINGS AND ESPRESSO, MAKING SAN FRANCISCO AND SEATTLE MY TWO FAVORITE CITIES.</h2>
+      <h2>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.</h2>
 
       <img src="../website-pics/seattle_SF.png" id="cities"/>
 
