--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
       <h1>BRIE.MARIE</h1>
       <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h2>AS A PART OF DEVBOOTCAMP'S CURRICULUM, I COMPLETED A SOLO APP CHALLENGE DURING PHASE 2, WEEK 6. I DEVELOPED AN APP, ARTSEE, WHICH CONSUMES THE BROOKLYN MUSEUM API TO ALLOW FOR QUICK ART SEARCHES BASED ON A DESIRED ARTIST. A FUTURE FEATURE OF THE APP WILL BE A MUSIC PLAYER THAT CROSS REFERENCES THE CHOSEN ARTWORK'S CREATION DATE AND PLAYS MUSIC THAT COULD HAVE POSSIBLY INSPIRED THE ARTIST WHILE AT WORK ON THE PIECE.<br />
+      <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge during Phase 2, Week 6. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
       <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a></h2>
 
-      <h2>IN ORDER TO GRADUATE DEVBOOTCAMP, GROUPS COMPLETED LARGER SCALE APPS. MY TEAM'S APP, VENDABLE, WAS DEVELOPED USING A NODE BACK-END AND AN ANGULAR/IONIC FRONT-END MOBILE IOS DESIGN. THE APP IS MEANT TO SIMPLIFY THE GROCERY SHOPPING EXPERIENCE IN A BIG CITY- COMPLETE WITH A MONGODB OF OVER 100 THOUSAND ITEMS FOUND AT BIG CHAIN GROCERY STORES, THE APP ALLOWS A USER TO FIND STORES BASED ON A 5 MILE RADIUS AND CREATE A SHOPPING LIST OF DESIRED ITEMS. THE LIST PULLS THE DATA AND UPDATES THE USER'S LIST WITH ITEM PRICES AND A GRAND TOTAL. WHEN THE USER IS READY, THE APP USES THE GOOGLE MAPS API TO ROUTE THE DIRECTIONS TO THE CHOSEN STORE.<br />
+      <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route the directions to the chosen store.<br />
 
       <a id="vendable" href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a></h2>
 
