--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 
       <img src="../website-pics/Dev-Bootcamp.png" />
 
-      <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel prepared and confident to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.</h2>
+      <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.</h2>
 
       <img src="../website-pics/ucberkeley.png" id="berkeley"/>
 
