--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-      <div class="circle right-circle">ARTS</div>
-      <div class="circle left-circle">TECH</div>
+      <div class="circle left-circle">ARTS</div>
+      <div class="circle right-circle">TECH</div>
       <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
       <h1>BRIE.MARIE</h1>
