--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
 
   <body>
+    <div id="ven">
       <div class="circle right-circle">ARTS</div>
       <div class="circle left-circle">TECH</div>
+    </div>
       <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
       <h1>BRIE.MARIE</h1>
