Refresh venn css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div id="ven">
+    <div id="venn">
       <div class="circle right-circle">ARTS</div>
       <div class="circle left-circle">TECH</div>
     </div>
