--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
   <body>
     <div id="venn">
-      <div class="circle right-circle">ARTS</div>
-      <div class="circle left-circle">TECH</div>
+      <div class="circle left-circle">ARTS</div>
+      <div class="circle right-circle">TECH</div>
     </div>
+
+    <div class="middle">MAGIC</div>
       <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
       <h1>BRIE.MARIE</h1>
