Fix html tag spacing

--- a/education.html
+++ b/education.html
@@ -9,23 +9,25 @@
   </head>
 
   <body>
-
       <h1>BRIE.MARIE</h1>
       <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
       <img src="../website-pics/Dev-Bootcamp.png" />
 
-      <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.</h2>
+      <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.
+      </h2>
 
       <img src="../website-pics/ucberkeley.png" id="berkeley"/>
 
-      <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.</h2>
+      <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
+      </h2>
 
       <img src="../website-pics/Mira_Costa_College_Logo_4c.png" />
 
-      <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.</h2>
+      <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
+      </h2>
 
-      <h3 class="footer"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span></h3>
-
+      <h3 class="footer"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+      </h3>
   </body>
 </html>
