--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <div class="circle left-circle">ARTS</div>
       <div class="circle right-circle">TECH</div>
     </div>
-
-    <div class="middle">MAGIC</div>
+    <hr>
+    <div class="magic">MAGIC</div>
       <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
-      <h1>BRIE.MARIE</h1>
-      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+    <h1>BRIE.MARIE</h1>
+    <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
 
-      <h3 class="footer"><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span></h3>
+    <h3 class="footer"><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+    </h3>
   </body>
 </html>
