Add img ids and change widths

--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
 
       <table>
         <tr>
-          <td><img src="../website-pics/Dev-Bootcamp.png" /></td>
+          <td><img src="../website-pics/Dev-Bootcamp.png" id="dbc"/></td>
           <td><h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.
           </h2></td>
         </tr>
@@ -24,7 +24,7 @@
           <td><img src="../website-pics/ucberkeley.png" id="berkeley"/></td>
         </tr>
         <tr>
-          <td><img src="../website-pics/Mira_Costa_College_Logo_4c.png" /></td>
+          <td><img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc"/></td>
           <td><h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
           </h2></td>
         </tr>
