Add more DBC education info

--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
       <table>
         <tr>
           <td><img src="../website-pics/Dev-Bootcamp.png" id="dbc"/></td>
-          <td><h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included server and client side Ruby on Rails, front-end AngularJS, and mobile builds with Ionic.
+          <td><h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5/CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
           </h2></td>
         </tr>
         <tr>
