--- a/blog-journal.html
+++ b/blog-journal.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Bootcamp Blog</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheets.css"/>
+
+    <link rel="stylesheet" href="../stylesheets/normalize.css">
+    <link rel="stylesheet" href="../stylesheets/blog-stylesheets.css"/>
     <style type="text/css">
       .centeredImage
         {
