--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>BRIE.MARIE.PORTFOLIO</title>
 
-    <link type="text/css" rel="stylesheet" href="../stylesheets/website.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../stylesheets/normalize.css">
+    <link rel="stylesheet" href="../stylesheets/website.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
 
   <body>
