Add selectivizr for ie8 venn diagram

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="utf-8">
     <title>BRIE.MARIE</title>
 
+
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!--[if (gte IE 6)&(lte IE 8)]>
+      <script src="selectivizr.js"></script>
+    <![endif]-->
   </head>
 
   <body>
