--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!--[if (gte IE 6)&(lte IE 8)]>
-      <script src="selectivizr.js"></script>
+      <script href="../javascript/selectivizr.js"></script>
     <![endif]-->
   </head>
 
