Add padding to venn div, and footer div to float bottom- better formatting

--- a/education.html
+++ b/education.html
@@ -31,7 +31,9 @@
         </tr>
       </table>
 
-      <h3 class="footer"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-      </h3>
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
   </body>
 </html>
