--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,9 @@
       <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
     </h3>
 
-
-    <h3 id="portfolio"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-    </h3>
+    <div id="footer">
+      <h3 id="portfolio"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+      </h3>
+    </div>
   </body>
 </html>
