Remove portfolio id for redundancy

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </h3>
 
     <div id="footer">
-      <h3 id="portfolio"><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+      <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
       </h3>
     </div>
   </body>
