--- a/education.html
+++ b/education.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
+    <link rel="stylesheet" href="../stylesheets/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
 
