--- a/education.html
+++ b/education.html
@@ -11,9 +11,12 @@
   </head>
 
   <body>
+    <div id= "header">
       <h1>BRIE.MARIE</h1>
       <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+    </div>
 
+    <div id="content">
       <div class="container">
         <div class="row">
           <div class="one-third column">
@@ -43,10 +46,11 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div id="footer">
-        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-        </h3>
-      </div>
+    <div id="footer">
+      <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+      </h3>
+    </div>
   </body>
 </html>
