Add wrapper div for relative positioning of absolute footer

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
   </head>
 
   <body>
-    <div id= "content">
-      <div id="venn">
-        <div class="circle left-circle">ARTS</div>
-        <div class="circle right-circle">TECH</div>
+    <div id="wrapper">
+      <div id= "content">
+        <div id="venn">
+          <div class="circle left-circle">ARTS</div>
+          <div class="circle right-circle">TECH</div>
+        </div>
+        <hr>
+        <div class="magic">MAGIC</div>
+          <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
+
+        <h1>BRIE.MARIE</h1>
+        <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
       </div>
-      <hr>
-      <div class="magic">MAGIC</div>
-        <!-- <img src="../website-pics/artstechmagic.jpg" id="ven" /> -->
 
-      <h1>BRIE.MARIE</h1>
-      <h2>CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-    </div>
-
-    <div id="footer">
-      <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-      </h3>
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
     </div>
   </body>
 </html>
