--- a/portfolio.html
+++ b/portfolio.html
@@ -10,30 +10,32 @@
   </head>
 
   <body>
-    <div id= "header">
-      <h1>BRIE.MARIE</h1>
-      <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-    </div>
+    <div id="wrapper">
+      <div id= "header">
+        <h1>BRIE.MARIE</h1>
+        <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      </div>
 
-    <div id= "content">
-      <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge during Phase 2, Week 6. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
+      <div id= "content">
+        <h2>As a part of Dev Bootcamp's curriculum, I completed a solo app challenge during Phase 2, Week 6. I developed a web app, Artsee, which consumes the Brooklyn Museum API to allow for quick art searches based on a desired artist. A future feature of the app will be the integration of a music API that cross references a chosen artwork's creation date and plays music that could have possibly inspired the artist while at work on the piece.<br />
 
-        <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
-      </h2>
+          <a id="artsee" href="https://github.com/briemarie/artsee">github.com/briemarie/artsee</a>
+        </h2>
 
-      <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
+        <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
 
-        <a id="vendable" href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a>
-      </h2>
+          <a id="vendable" href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a>
+        </h2>
 
-      <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
-        <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
-      </h3>
-    </div>
+        <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
+          <a href="https://www.linkedin.com/pub/brittney-hodson/a3/237/123"><img class= "logo" src="../website-pics/linkedin.png" /></a><a href="https://github.com/briemarie"><img class= "logo" src="../website-pics/github.png"/></a><a href="https://twitter.com/briemarie5"><img class= "logo" src="../website-pics/twitter.png"/></a><a href="mailto:thebriemarie@gmail.com"><img class= "logo" src="../website-pics/gmail.png"/></a>
+        </h3>
+      </div>
 
-    <div id="footer">
-      <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-      </h3>
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/education.html">EDUCATION</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
     </div>
   </body>
 </html>
