--- a/aboutme.html
+++ b/aboutme.html
@@ -10,21 +10,23 @@
   </head>
 
   <body>
-    <div id= "header">
-      <h1>BRIE.MARIE</h1>
-      <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
-    </div>
+    <div id="wrapper">
+      <div id= "header">
+        <h1>BRIE.MARIE</h1>
+        <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
+      </div>
 
-    <div id= "content">
-      <h2>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
-      </h2>
+      <div id= "content">
+        <h2>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
+        </h2>
 
-      <img src="../website-pics/seattle_SF.png" id="cities"/>
-    </div>
+        <img src="../website-pics/seattle_SF.png" id="cities"/>
+      </div>
 
-    <div id="footer">
-      <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-      </h3>
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a href="http://briemarie.github.io/education.html">EDUCATION</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
     </div>
   </body>
 </html>
