Change vendable repo to briemarie fork

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
         <h2>In order to graduate Dev Bootcamp, groups completed larger scale apps. My team's app, Vendable, was developed using a Node.js back-end and an AngluarJS/Ionic front-end mobile iOS design. The app is meant to simplify the grocery shopping experience in a big city— complete with a MongoDB of over 100 thousand items found at big chain grocery stores, the app allows a user to find stores based on a 5 mile radius and create a shopping list of desired items found at a selected store. The list pulls the data and updates the user's list with item prices and and a grand total. When the user is ready, the app uses the Google Maps API to route directions to the chosen store.<br />
 
-          <a id="vendable" href="https://github.com/Midnightapplepie/Vendable">github.com/Midnightapplepie/Vendable</a>
+          <a id="vendable" href="https://github.com/briemarie/Vendable">github.com/briemarie/Vendable</a>
         </h2>
 
         <h3 id="networks">FOR ADDITIONAL PROFESSIONAL INFORMATION, PLEASE CONNECT WITH ME THROUGH THE FOLLOWING NETWORKS:<br />
