--- a/education.html
+++ b/education.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
+    <!--[if IE]>
+      <link rel="stylesheet" href="../stylesheets/ie.css" />
+    <![endif]-->
     <link rel="stylesheet" href="../stylesheets/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
