--- a/education.html
+++ b/education.html
@@ -5,6 +5,9 @@
     <title>BRIE.MARIE.EDUCATION</title>
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
+    <!--[if IE]>
+      <link rel="stylesheet" href="../stylesheets/ie.css" />
+    <![endif]-->
     <link rel="stylesheet" href="../stylesheets/website.css">
     <link rel="stylesheet" href="../stylesheets/skeleton.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
