--- a/education.html
+++ b/education.html
@@ -8,8 +8,12 @@
     <!--[if IE]>
       <link rel="stylesheet" href="../stylesheets/ie.css" />
     <![endif]-->
-    <link rel="stylesheet" href="../stylesheets/website.css">
-    <link rel="stylesheet" href="../stylesheets/skeleton.css">
+
+    <!--[if !IE]>
+      <link rel="stylesheet" href="../stylesheets/website.css">
+      <link rel="stylesheet" href="../stylesheets/skeleton.css">
+    <![endif]-->
+
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
 
