Fix conditional so that non ie browsers do not read conditional as comment

--- a/education.html
+++ b/education.html
@@ -9,10 +9,10 @@
       <link rel="stylesheet" href="../stylesheets/ie.css" />
     <![endif]-->
 
-    <!--[if !IE]>
+    <!--[if !IE]-->
       <link rel="stylesheet" href="../stylesheets/website.css">
       <link rel="stylesheet" href="../stylesheets/skeleton.css">
-    <![endif]-->
+    <!--[endif]-->
 
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
@@ -44,7 +44,7 @@
         </table>
       <![endif]-->
 
-      <!--[if !IE]>
+      <!--[if !IE]-->
         <div id="content">
           <div class="container">
             <div class="row">
@@ -82,6 +82,6 @@
           </h3>
         </div>
       </div>
-    <![endif]-->
+    <!--[endif]-->
   </body>
 </html>
