--- a/education.html
+++ b/education.html
@@ -5,12 +5,11 @@
     <title>BRIE.MARIE.EDUCATION</title>
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
-
-
-
-      <link rel="stylesheet" href="../stylesheets/website.css">
-      <link rel="stylesheet" href="../stylesheets/skeleton.css">
-
+    <link rel="stylesheet" href="../stylesheets/website.css">
+    <link rel="stylesheet" href="../stylesheets/skeleton.css">
+    <!--[if lt IE 9]>
+      <link rel="stylesheet" href="../stylesheets/ie.css">
+    <![endif]-->
 
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
@@ -22,44 +21,42 @@
         <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
       </div>
 
-
-        <div id="content">
-          <div class="container">
-            <div class="row">
-              <div class="one-third column">
-                <img src="../website-pics/Dev-Bootcamp.png" id="dbc"/>
-              </div>
-              <div class="two-thirds column">
-                <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5/CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
-                </h2>
-              </div>
+      <div id="content">
+        <div class="container">
+          <div class="row">
+            <div class="one-third column">
+              <img src="../website-pics/Dev-Bootcamp.png" id="dbc"/>
             </div>
-            <div class="row">
-              <div class="two-thirds column">
-                <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
-                </h2>
-              </div>
-              <div class="one-third column">
-                <img src="../website-pics/ucberkeley.png" id="berkeley"/>
-              </div>
+            <div class="two-thirds column">
+              <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5/CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
+              </h2>
             </div>
-            <div class="row">
-              <div class="one-third column">
-                <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc"/>
-              </div>
-              <div class="two-thirds column">
-                <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
-                </h2>
-              </div>
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
+              </h2>
+            </div>
+            <div class="one-third column">
+              <img src="../website-pics/ucberkeley.png" id="berkeley"/>
+            </div>
+          </div>
+          <div class="row">
+            <div class="one-third column">
+              <img src="../website-pics/Mira_Costa_College_Logo_4c.png" id="mcc"/>
+            </div>
+            <div class="two-thirds column">
+              <h2>I graduated from Mira Costa Community College in Oceanside, California with my AA in Social and Behavioral Sciences in May of 2012. The emphasis of my studies was in various areas of psychology, and I was awarded a spot in the Phi Theta Kappa Honor Society. I had my first poem published in a local literary magazine, and volunteered many hours helping with community activities sponsored by the astronomy department.
+              </h2>
             </div>
           </div>
         </div>
-
-        <div id="footer">
-          <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
-          </h3>
-        </div>
       </div>
 
+      <div id="footer">
+        <h3><a  href="http://briemarie.github.io">HOME</a>.<a  href="http://briemarie.github.io/aboutme.html">ABOUT ME</a><span id="right"><a href="http://briemarie.github.io/portfolio.html">PORTFOLIO</a>.<a href="http://briemarie.github.io/blog-journal.html">BLOG</a></span>
+        </h3>
+      </div>
+    </div>
   </body>
 </html>
