--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
         <h2 class="scarlett">CODER.PAINTER.POET.TRAVELER.GIGGLER</h2>
       </div>
 
-      <div id= "content">
+      <div id= "about-me-content">
         <h2>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
         </h2>
 
