Add comments to separate css classes into usage pages

--- a/education.html
+++ b/education.html
@@ -28,13 +28,13 @@
               <img src="../website-pics/Dev-Bootcamp.png" id="dbc"/>
             </div>
             <div class="two-thirds column">
-              <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5/CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
+              <h2>I graduated from Dev Bootcamp in San Francisco in January of 2015. I completed over 1000 hours of coding in the 18 week program, and feel confident and prepared to start work as a full-stack web and mobile app developer. Areas of focus included Ruby, server and client side Rails, Active Record, functional and OO JS, HTML5 and CSS3 design, single page apps with AJAX and jQuery, front-end AngularJS, and iOS mobile builds with Ionic.
               </h2>
             </div>
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
+              <h2>I graduated with my BA in English from UC Berkeley in May of 2014. The emphasis of my studies was romantic and modern poetry, and I was awarded a spot in the Phi Beta Kappa Honor Society. While attending, I had four poems published in various literary magazines. I also helped found an all women's meditation group on campus, Fiat Lux for Women.
               </h2>
             </div>
             <div class="one-third column">
