--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>BRIE.MARIE</title>
 
-
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/website.css">
+    <!--[if lt IE 9]>
+      <link rel="stylesheet" href="../stylesheets/ie.css">
+    <![endif]-->
+
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet'>
   </head>
 
