--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id= "about-me-content">
-        <h2>I am a published poet turned creative coder. I am an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am passionate about reducing human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
+        <h2>I am a published poet turned creative coder, an art enthusiast and painter transforming personal aesthetic appeals into front-end web and mobile app design. I believe in inventing and reinventing myself often. When I was eleven, I trained myself to be left handed. I am a right-brain, big-picture thinker balancing the world of linear logic and reason. I am impassioned by efforts to reduce human trafficking, both locally and globally. I believe in dancing and laughing as much as possible. I love foggy mornings and espresso, making San Francisco and Seattle my two favorite cities.
         </h2>
 
         <img src="../website-pics/seattle_SF.png" id="cities"/>
