--- a/education.html
+++ b/education.html
@@ -50,6 +50,7 @@
               </h2>
             </div>
           </div>
+          * Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
         </div>
       </div>
 
