--- a/education.html
+++ b/education.html
@@ -51,7 +51,8 @@
             </div>
           </div>
         </div>
-        * Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
+          <h2>* Fun fact about my education: I was homeschooled for most of my primary and secondary schooling, and graduated high school when I was sixteen.
+          </h2>
       </div>
 
       <div id="footer">
